--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
 
       <div class="cards animate slideInLeft" id="blogs">
         <div class="image">
-          <img src="/componets/maxresdefault.jpg" alt="blog image">
+          <img src="https://github.com/dilipkumar970/portfolio/blob/5290b6184988fd863f1ca2c3640973ae45ca39bb/componets/maxresdefault.jpg" alt="blog image">
         </div>
         <div class="title">
           <h3>"Streamlining Workflows: Harnessing Automation with Inkscape"</h3>
