--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
       <div class="section"></div>
       <div class="cards animate slideInLeft" id="blogs">
         <div class="image">
-          <img src="/componets/print5.jpg" alt="blog image">
+          <img src="https://github.com/dilipkumar970/portfolio/blob/7c515f14dcb8571f93e9b9d9373389813f8be5db/componets/print5.jpg" alt="blog image">
         </div>
         <div class="title">
           <h3>Demystifying BIOS Setup</h3>
