--- a/src/index.html
+++ b/src/index.html
@@ -98,14 +98,6 @@
       </div>
 
     </div>
-      
-      
-      <!---Social media connection
-
-    <div class="links">
-        <div id="connect"></div>
-        <a href="https://linktr.ee/dilipkumar_">let's Connect</a>
-      </div> --->
 
       <!---contact details-->
 
@@ -125,6 +117,15 @@
         <input type="submit" value="Submit">
       </form>
      </div>
+     <!---Social media connection ----->
+
+    <div class="links">
+      <div class="text" style="font-size: x-large; border-radius: 10px;   box-shadow: #62f7f7;color:red;">
+        <button class="refrence" >
+      <a href="https://linktr.ee/dilipkumar_" style="color: #66FCF1;">let's Connect</a>
+    </button>
+    </div>
+  </div> 
 
   </body>
 </html>
