--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <style>
     
     body {
-      background-image: url(https://github.com/dilipkumar970/portfolio/blob/6cdbfe89512fb50baa89bd7b594ceaec2734984e/componets/img2.jpg);
+      background-image: url(./componets/img2.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;  
       background-size: cover;
