--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <style>
     
     body {
-      background-image: url(/src/componets/img2.jpg);
+      background-image: url(src/componets/img2.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;  
       background-size: cover;
