--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <style>
     
     body {
-      background-image: url(src/componets/img2.jpg);
+      background-image: url(./componets/img2.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;  
       background-size: cover;
@@ -78,7 +78,7 @@
           <div class="first">
             <div class="cards animate slideInLeft">
               <div class="image">
-                <img src="/src/componets/print5.jpg" alt="blog image">
+                <img src="./componets/print5.jpg" alt="blog image">
               </div>
               <div class="title">
                 <h3>Demystifying BIOS Setup</h3>
@@ -94,7 +94,7 @@
 
             <div class="cards animate slideInLeft" id="blogs">
               <div class="image">
-                <img src="/src/componets/maxresdefault.jpg" alt="blog image">
+                <img src="./componets/maxresdefault.jpg" alt="blog image">
               </div>
               <div class="title">
                 <h3>"Streamlining Workflows: Harnessing Automation with Inkscape"</h3>
